Updated Translator.jsx with new working AP1I

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
-    <title>Portfolio Website</title>
+    <title>Vishnu_Shankar_Mishra</title>
 </head>
 
 <body>
@@ -56,7 +56,7 @@
                 <a href="https://www.instagram.com/animevis11_22/" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="/New folder/document/vishnu_resume1.pdf" download="/New folder/document/vishnu_resume1.pdf"
+            <a href="/New folder/document/Vishnu_Shankar_Mishra.pdf" download="/New folder/document/Vishnu_Shankar_Mishra.pdf"
                 class="btn">Resume</a>
         </div>
     </section>
