Updated Translator.jsx with new working AP1I

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="https://www.instagram.com/animevis11_22/" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="/New folder/document/Vishnu_Shankar_Mishra.pdf" download="/New folder/document/Vishnu_Shankar_Mishra.pdf"
+            <a href="document/Vishnu_Shankar_Mishra.pdf" download="document/Vishnu_Shankar_Mishra.pdf"
                 class="btn">Resume</a>
         </div>
     </section>
